--- a/src/html/folder.html
+++ b/src/html/folder.html
@@ -11,7 +11,8 @@
     <script src="/js/folder.js" type="text/javascript"></script>
   </head>
   <body>
-    <div id="content">loading url</div>
+    <div id="content">no url!</div>
+    <input id="rename"/>
     <div id="debug"></div>
     <div id="folders_list">
     </div>
